<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="whisped_cream">Whisped cream</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_wipped_cream">Add whipped cream? <xliff:g id="wippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="chocolate" example="true">%b</xliff:g></string>
</resources>
