<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.koylubaevnt.udacity.justjava.MainActivity">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"/>
        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"/>
        <CheckBox
            android:id="@+id/whisped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/whisped_cream"
            android:paddingLeft="24dp"
            tools:ignore="RtlSymmetry" />
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:onClick="decrement"
                />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:text="1"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:onClick="increment"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/order_summary"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="$0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/order"
            android:onClick="submitOrder"
            />
    </LinearLayout>
</ScrollView>